--- a/Autovokzal_v1.0/Windows/PlaneWindow.xaml
+++ b/Autovokzal_v1.0/Windows/PlaneWindow.xaml
@@ -10,7 +10,7 @@
         <TextBlock FontSize="24" HorizontalAlignment="Center" Margin="50">Выберите список:</TextBlock>
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Width="125" Height="50" Margin="30" Click="Button_Click1">Список водителей</Button>
-            <Button Width="125" Height="50" Margin="30">Список транспорта</Button>
+            <Button Width="125" Height="50" Margin="30" Click="Button_Click2">Список транспорта</Button>
             <Button Width="125" Height="50" Margin="30">Список маршрутов</Button>
         </StackPanel>
     </Grid>
