--- a/Autovokzal_v1.0/Windows/PlaneWindow.xaml
+++ b/Autovokzal_v1.0/Windows/PlaneWindow.xaml
@@ -11,7 +11,7 @@
         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
             <Button Width="125" Height="50" Margin="30" Click="Button_Click1">Список водителей</Button>
             <Button Width="125" Height="50" Margin="30" Click="Button_Click2">Список транспорта</Button>
-            <Button Width="125" Height="50" Margin="30">Список маршрутов</Button>
+            <Button Width="125" Height="50" Margin="30" Click="Button_Click3">Список маршрутов</Button>
         </StackPanel>
     </Grid>
 </Window>
