--- a/Autovokzal_v1.0/Windows/RoutesList.xaml
+++ b/Autovokzal_v1.0/Windows/RoutesList.xaml
@@ -11,7 +11,7 @@
             <RowDefinition />
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
-        <ListBox x:Name="techniqueList" ItemsSource="{Binding}">
+        <ListBox x:Name="routesList" ItemsSource="{Binding}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
