--- a/Autovokzal_v1.0/Windows/HR_dep.xaml
+++ b/Autovokzal_v1.0/Windows/HR_dep.xaml
@@ -16,13 +16,13 @@
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="40"/>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="160"/>
-                            <ColumnDefinition Width="80"/>
-                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="{Binding Short_Id}" FontSize="13" HorizontalAlignment="Center" Margin="5" />
                         <TextBlock Text="{Binding Name}" FontSize="13" Grid.Column="1" HorizontalAlignment="Center" Margin="5"/>
