--- a/Autovokzal_v1.0/Windows/RoutesList.xaml
+++ b/Autovokzal_v1.0/Windows/RoutesList.xaml
@@ -16,25 +16,25 @@
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="{Binding RouteName}" FontSize="13" Grid.Column="0" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding RouteStartDate}" FontSize="13" Grid.Column="1" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding RouteEndDate}" FontSize="13" Grid.Column="2" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding RouteCode}" FontSize="13" Grid.Column="3" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding Price}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding isClosed}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding WorkingDays}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding isWEW}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding isFYear}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding isClosed}" FontSize="13" Grid.Column="5" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding WorkingDays}" FontSize="13" Grid.Column="6" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding isWEW}" FontSize="13" Grid.Column="7" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding isFYear}" FontSize="13" Grid.Column="8" HorizontalAlignment="Center"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
