--- a/Autovokzal_v1.0/Windows/TechniqueList.xaml
+++ b/Autovokzal_v1.0/Windows/TechniqueList.xaml
@@ -16,25 +16,25 @@
                 <DataTemplate>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
-                            <ColumnDefinition Width="100"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="{Binding Mark}" FontSize="13" Grid.Column="0" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding Model}" FontSize="13" Grid.Column="1" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding Color}" FontSize="13" Grid.Column="2" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding GovNumber}" FontSize="13" Grid.Column="3" HorizontalAlignment="Center"/>
                         <TextBlock Text="{Binding Type}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding Volume}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding FuelCons}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding LC}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
-                        <TextBlock Text="{Binding VIN}" FontSize="13" Grid.Column="4" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding Volume}" FontSize="13" Grid.Column="5" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding FuelCons}" FontSize="13" Grid.Column="6" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding LC}" FontSize="13" Grid.Column="7" HorizontalAlignment="Center"/>
+                        <TextBlock Text="{Binding VIN}" FontSize="13" Grid.Column="8" HorizontalAlignment="Center"/>
                     </Grid>
                 </DataTemplate>
             </ListBox.ItemTemplate>
