--- a/Autovokzal_v1.0/Windows/HR_dep.xaml
+++ b/Autovokzal_v1.0/Windows/HR_dep.xaml
@@ -11,7 +11,7 @@
             <RowDefinition/>
             <RowDefinition Height="50" />
         </Grid.RowDefinitions>
-        <ListBox x:Name="personalList" ItemsSource="{Binding}">
+        <ListBox x:Name="personalList" ItemsSource="{Binding}" Background="#FFF3F3F3">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Grid>
